--- a/innerpages/contact.html
+++ b/innerpages/contact.html
@@ -130,7 +130,7 @@
                             </div>
                         </div>
                         <div class="col-lg-6">
-                            <form action="" class="form mt-5 mt-lg-0 wow fadeInUp slow" action="https://formspree.io/f/xzbqvpjn"
+                            <form class="form contact-form" action="https://formspree.io/f/xzbqvpjn"
                             method="POST" data-wow-delay="0.4s">
 
                                 <div class="row">
@@ -170,9 +170,9 @@
                                         </div>
                                     </div>
                                 </div>
-                                <a href="#" class="butn hover-bg-orange1 text-capitalize bg-orange1 text-white rounded-pill mt-40">
+                                <button class="butn hover-bg-orange1 text-capitalize bg-orange1 text-white rounded-pill mt-40">
                                     <span> Send Your Message <i class="fal fa-arrow-up-right ms-2"></i> </span>
-                                </a>
+                                </button>
                                 <!-- <p class="fsz-12 color-666 mt-20"> By summiting, i’m agree to the <a href="#" -->
                                         <!-- class="color-000 text-decoration-underline"> Terms & Conditions </a> </p> -->
                             </form>
