--- a/innerpages/contact.html
+++ b/innerpages/contact.html
@@ -137,25 +137,25 @@
                                     <div class="col-lg-6">
                                         <div class="form-group mb-30">
                                             <label for=""> Full name <span class="color-orange1"> * </span> </label>
-                                            <input type="text" class="form-control" placeholder="your name">
+                                            <input type="name" class="form-control" placeholder="your name">
                                         </div>
                                     </div>
                                     <div class="col-lg-6">
                                         <div class="form-group mb-30">
                                             <label for=""> email address <span class="color-orange1"> * </span> </label>
-                                            <input type="text" class="form-control" placeholder="Your email address">
+                                            <input type="email" class="form-control" placeholder="Your email address">
                                         </div>
                                     </div>
                                     <div class="col-lg-6">
                                         <div class="form-group mb-30">
                                             <label for=""> Phone <span class="color-999"> (optional) </span> </label>
-                                            <input type="text" class="form-control" placeholder="Your phone number">
+                                            <input type="phone" class="form-control" placeholder="Your phone number">
                                         </div>
                                     </div>
                                     <div class="col-lg-6">
                                         <div class="form-group mb-30">
                                             <label for=""> subject <span class="color-orange1"> * </span> </label>
-                                            <select name="" id="" class="form-select form-control">
+                                            <select name="message" id="" class="form-select form-control">
                                                 <option value=""> Select a subject </option>
                                                 <option value=""> General Inquiry </option>
                                                 <option value=""> Pricing </option>
