--- a/innerpages/contact.html
+++ b/innerpages/contact.html
@@ -136,26 +136,26 @@
                                 <div class="row">
                                     <div class="col-lg-6">
                                         <div class="form-group mb-30">
-                                            <label for=""> Full name <span class="color-orange1"> * </span> </label>
-                                            <input type="name" class="form-control" placeholder="your name">
+                                            <label for="name"> Full name <span class="color-orange1"> * </span> </label>
+                                            <input type="text" name="name" class="form-control" placeholder="your name">
                                         </div>
                                     </div>
                                     <div class="col-lg-6">
                                         <div class="form-group mb-30">
-                                            <label for=""> email address <span class="color-orange1"> * </span> </label>
-                                            <input type="email" class="form-control" placeholder="Your email address">
+                                            <label for="email"> email address <span class="color-orange1"> * </span> </label>
+                                            <input type="text" name="email"  class="form-control" placeholder="Your email address">
                                         </div>
                                     </div>
                                     <div class="col-lg-6">
                                         <div class="form-group mb-30">
-                                            <label for=""> Phone <span class="color-999"> (optional) </span> </label>
-                                            <input type="phone" class="form-control" placeholder="Your phone number">
+                                            <label for="phone"> Phone <span class="color-999"> (optional) </span> </label>
+                                            <input type="text" name ="phone" class="form-control" placeholder="Your phone number">
                                         </div>
                                     </div>
                                     <div class="col-lg-6">
                                         <div class="form-group mb-30">
-                                            <label for=""> subject <span class="color-orange1"> * </span> </label>
-                                            <select name="message" id="" class="form-select form-control">
+                                            <label for="select"> subject <span class="color-orange1"> * </span> </label>
+                                            <select name="message" type="select" id="" class="form-select form-control">
                                                 <option value=""> Select a subject </option>
                                                 <option value=""> General Inquiry </option>
                                                 <option value=""> Pricing </option>
@@ -164,8 +164,8 @@
                                     </div>
                                     <div class="col-lg-12">
                                         <div class="form-group mb-30">
-                                            <label for=""> message </label>
-                                            <textarea rows="6" placeholder="Write your message here"
+                                            <label for="message"> message </label>
+                                            <textarea rows="6" placeholder="Write your message here"  type="text" name ="message" 
                                                 class="form-control"></textarea>
                                         </div>
                                     </div>
